kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; kitty 0.15.0 documentation</title>
+    <title>Index &#8212; kitty 0.15.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -150,6 +150,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-get-text-ansi">kitty-@-get-text command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --ascending
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-ascending">kitty-+kitten-hints command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1070,6 +1077,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.active_tab_foreground">kitty.active_tab_foreground</a>
 </li>
+        <li><a href="conf.html#opt-kitty.active_tab_title_template">kitty.active_tab_title_template</a>
+</li>
         <li><a href="conf.html#opt-kitty.adjust_line_height">kitty.adjust_line_height</a>
 </li>
         <li><a href="conf.html#opt-kitty.allow_remote_control">kitty.allow_remote_control</a>
@@ -1219,6 +1228,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.symbol_map">kitty.symbol_map</a>
 </li>
         <li><a href="conf.html#opt-kitty.sync_to_monitor">kitty.sync_to_monitor</a>
+</li>
+        <li><a href="conf.html#opt-kitty.tab_bar_background">kitty.tab_bar_background</a>
 </li>
         <li><a href="conf.html#opt-kitty.tab_bar_edge">kitty.tab_bar_edge</a>
 </li>
@@ -1743,6 +1754,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-alphabet">--alphabet &lt;ALPHABET&gt;</a>
 </li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-ascending">--ascending</a>
+</li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-customize-processing">--customize-processing &lt;CUSTOMIZE_PROCESSING&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-offset">--hints-offset &lt;HINTS_OFFSET&gt;</a>
@@ -2169,6 +2182,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.active_tab_foreground">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.active_tab_title_template
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.active_tab_title_template">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -3058,6 +3078,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.sync_to_monitor">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.tab_bar_background
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.tab_bar_background">Config Setting</a>
 </li>
       </ul></li>
       <li>
