--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; kitty 0.15.1 documentation</title>
+    <title>Index &#8212; kitty 0.16.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -425,6 +425,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --linenum-action &lt;LINENUM_ACTION&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-linenum-action">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
     --lines &lt;LINES&gt;
 
       <ul>
@@ -450,12 +457,25 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --marker &lt;MARKER&gt;
+
+      <ul>
+        <li><a href="generated/launch.html#cmdoption-marker">command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-marker">kitty-@-launch command line option</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-marker">launch command line option</a>
+</li>
+      </ul></li>
+      <li>
     --match &lt;MATCH&gt;
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-close-tab-match">kitty-@-close-tab command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-close-window-match">kitty-@-close-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-create-marker-match">kitty-@-create-marker command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-detach-tab-match">kitty-@-detach-tab command line option</a>
 </li>
@@ -480,6 +500,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-launch-match">kitty-@-launch command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-new-window-match">kitty-@-new-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-remove-marker-match">kitty-@-remove-marker command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-resize-window-match">kitty-@-resize-window command line option</a>
 </li>
@@ -627,6 +649,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-close-window-self">kitty-@-close-window command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-create-marker-self">kitty-@-create-marker command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-detach-tab-self">kitty-@-detach-tab command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-detach-window-self">kitty-@-detach-window command line option</a>
@@ -634,6 +658,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-get-text-self">kitty-@-get-text command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-self">kitty-@-launch command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-remove-marker-self">kitty-@-remove-marker command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-resize-window-self">kitty-@-resize-window command line option</a>
 </li>
@@ -850,6 +876,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --z-index &lt;Z_INDEX&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-z-index">kitty-+kitten-icat command line option</a>
+</li>
+      </ul></li>
+      <li>
     -1
 
       <ul>
@@ -916,6 +949,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-close-window-match">kitty-@-close-window command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-create-marker-match">kitty-@-create-marker command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-detach-tab-match">kitty-@-detach-tab command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-detach-window-match">kitty-@-detach-window command line option</a>
@@ -939,6 +974,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-launch-match">kitty-@-launch command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-new-window-match">kitty-@-new-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-remove-marker-match">kitty-@-remove-marker command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-resize-window-match">kitty-@-resize-window command line option</a>
 </li>
@@ -1002,6 +1039,13 @@ ga('send', 'pageview');
         <li><a href="invocation.html#cmdoption-kitty-version">kitty command line option</a>
 </li>
       </ul></li>
+      <li>
+    -z &lt;Z_INDEX&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-z-index">kitty-+kitten-icat command line option</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -1027,6 +1071,8 @@ ga('send', 'pageview');
         <li><a href="generated/launch.html#cmdoption-keep-focus">--keep-focus</a>
 </li>
         <li><a href="generated/launch.html#cmdoption-location">--location &lt;LOCATION&gt;</a>
+</li>
+        <li><a href="generated/launch.html#cmdoption-marker">--marker &lt;MARKER&gt;</a>
 </li>
         <li><a href="generated/launch.html#cmdoption-stdin-add-formatting">--stdin-add-formatting</a>
 </li>
@@ -1149,7 +1195,11 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.font_family">kitty.font_family</a>
 </li>
+        <li><a href="conf.html#opt-kitty.font_features">kitty.font_features</a>
+</li>
         <li><a href="conf.html#opt-kitty.font_size">kitty.font_size</a>
+</li>
+        <li><a href="conf.html#opt-kitty.force_ltr">kitty.force_ltr</a>
 </li>
         <li><a href="conf.html#opt-kitty.foreground">kitty.foreground</a>
 </li>
@@ -1185,6 +1235,18 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.macos_window_resizable">kitty.macos_window_resizable</a>
 </li>
+        <li><a href="conf.html#opt-kitty.mark1_background">kitty.mark1_background</a>
+</li>
+        <li><a href="conf.html#opt-kitty.mark1_foreground">kitty.mark1_foreground</a>
+</li>
+        <li><a href="conf.html#opt-kitty.mark2_background">kitty.mark2_background</a>
+</li>
+        <li><a href="conf.html#opt-kitty.mark2_foreground">kitty.mark2_foreground</a>
+</li>
+        <li><a href="conf.html#opt-kitty.mark3_background">kitty.mark3_background</a>
+</li>
+        <li><a href="conf.html#opt-kitty.mark3_foreground">kitty.mark3_foreground</a>
+</li>
         <li><a href="conf.html#opt-kitty.mouse_hide_wait">kitty.mouse_hide_wait</a>
 </li>
         <li><a href="conf.html#opt-kitty.open_url_modifiers">kitty.open_url_modifiers</a>
@@ -1204,6 +1266,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.resize_debounce_time">kitty.resize_debounce_time</a>
 </li>
         <li><a href="conf.html#opt-kitty.resize_draw_strategy">kitty.resize_draw_strategy</a>
+</li>
+        <li><a href="conf.html#opt-kitty.resize_in_steps">kitty.resize_in_steps</a>
 </li>
         <li><a href="conf.html#opt-kitty.scrollback_lines">kitty.scrollback_lines</a>
 </li>
@@ -1383,6 +1447,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#shortcut-kitty.Open selected path">kitty.Open selected path</a>
 </li>
         <li><a href="conf.html#shortcut-kitty.Open the kitty command shell">kitty.Open the kitty command shell</a>
+</li>
+        <li><a href="conf.html#shortcut-kitty.Open the selected file at the selected line">kitty.Open the selected file at the selected line</a>
 </li>
         <li><a href="conf.html#shortcut-kitty.Open URL">kitty.Open URL</a>
 </li>
@@ -1760,6 +1826,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-offset">--hints-offset &lt;HINTS_OFFSET&gt;</a>
 </li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-linenum-action">--linenum-action &lt;LINENUM_ACTION&gt;</a>
+</li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-minimum-match-length">--minimum-match-length &lt;MINIMUM_MATCH_LENGTH&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-multiple">--multiple</a>
@@ -1800,6 +1868,10 @@ ga('send', 'pageview');
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-stdin">--stdin &lt;STDIN&gt;</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-transfer-mode">--transfer-mode &lt;TRANSFER_MODE&gt;</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-z-index">--z-index &lt;Z_INDEX&gt;</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-z-index">-z &lt;Z_INDEX&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -1855,6 +1927,17 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-close-window-self">--self</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-close-window-match">-m &lt;MATCH&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-create-marker command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-create-marker-match">--match &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-create-marker-self">--self</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-create-marker-match">-m &lt;MATCH&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -2001,6 +2084,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-location">--location &lt;LOCATION&gt;</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-marker">--marker &lt;MARKER&gt;</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-match">--match &lt;MATCH&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-no-response">--no-response</a>
@@ -2045,6 +2130,17 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-new-window-window-type">--window-type &lt;WINDOW_TYPE&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-new-window-match">-m &lt;MATCH&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-remove-marker command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-remove-marker-match">--match &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-remove-marker-self">--self</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-remove-marker-match">-m &lt;MATCH&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -2507,10 +2603,24 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.font_features
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.font_features">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.font_size
 
       <ul>
         <li><a href="conf.html#opt-kitty.font_size">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.force_ltr
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.force_ltr">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -2689,6 +2799,48 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.mark1_background
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.mark1_background">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.mark1_foreground
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.mark1_foreground">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.mark2_background
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.mark2_background">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.mark2_foreground
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.mark2_foreground">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.mark3_background
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.mark3_background">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.mark3_foreground
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.mark3_foreground">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.mouse_hide_wait
 
       <ul>
@@ -2784,6 +2936,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#shortcut-kitty.Open the kitty command shell">Keyboard Shortcut</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.Open the selected file at the selected line
+
+      <ul>
+        <li><a href="conf.html#shortcut-kitty.Open the selected file at the selected line">Keyboard Shortcut</a>
 </li>
       </ul></li>
       <li>
@@ -2910,6 +3069,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.resize_draw_strategy">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.resize_in_steps
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.resize_in_steps">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -3288,6 +3454,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="launch.html#cmdoption-launch-location">--location &lt;LOCATION&gt;</a>
 </li>
+        <li><a href="launch.html#cmdoption-launch-marker">--marker &lt;MARKER&gt;</a>
+</li>
         <li><a href="launch.html#cmdoption-launch-stdin-add-formatting">--stdin-add-formatting</a>
 </li>
         <li><a href="launch.html#cmdoption-launch-stdin-add-line-wrap-markers">--stdin-add-line-wrap-markers</a>
@@ -3315,7 +3483,7 @@ ga('send', 'pageview');
     <div class="clearer"></div>
   </div>
     <div class="footer">
-      &copy;2019, Kovid Goyal.
+      &copy;2020, Kovid Goyal.
       
     </div>
 
