kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; kitty 0.16.0 documentation</title>
+    <title>Index &#8212; kitty 0.17.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -120,6 +120,10 @@ ga('send', 'pageview');
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-all">kitty-@-disable-ligatures command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-last-used-layout-all">kitty-@-last-used-layout command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-all">kitty-@-set-background-image command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-all">kitty-@-set-background-opacity command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-all">kitty-@-set-colors command line option</a>
@@ -203,6 +207,8 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-get-colors-configured">kitty-@-get-colors command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-configured">kitty-@-set-background-image command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-configured">kitty-@-set-colors command line option</a>
 </li>
@@ -425,6 +431,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --layout &lt;LAYOUT&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-layout">kitty-@-set-background-image command line option</a>
+</li>
+      </ul></li>
+      <li>
     --linenum-action &lt;LINENUM_ACTION&gt;
 
       <ul>
@@ -509,6 +522,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match">kitty-@-send-text command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-match">kitty-@-set-background-image command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match">kitty-@-set-background-opacity command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-match">kitty-@-set-colors command line option</a>
@@ -579,8 +594,30 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-new-window-no-response">kitty-@-new-window command line option</a>
 </li>
       </ul></li>
+      <li>
+    --os-window-class &lt;OS_WINDOW_CLASS&gt;
+
+      <ul>
+        <li><a href="generated/launch.html#cmdoption-os-window-class">command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-os-window-class">kitty-@-launch command line option</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-os-window-class">launch command line option</a>
+</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    --os-window-name &lt;OS_WINDOW_NAME&gt;
+
+      <ul>
+        <li><a href="generated/launch.html#cmdoption-os-window-name">command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-os-window-name">kitty-@-launch command line option</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-os-window-name">launch command line option</a>
+</li>
+      </ul></li>
       <li>
     --override &lt;OVERRIDE&gt;
 
@@ -895,6 +932,10 @@ ga('send', 'pageview');
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-disable-ligatures-all">kitty-@-disable-ligatures command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-last-used-layout-all">kitty-@-last-used-layout command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-all">kitty-@-set-background-image command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-all">kitty-@-set-background-opacity command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-all">kitty-@-set-colors command line option</a>
@@ -914,6 +955,8 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-get-colors-configured">kitty-@-get-colors command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-configured">kitty-@-set-background-image command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-configured">kitty-@-set-colors command line option</a>
 </li>
@@ -982,6 +1025,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-scroll-window-match">kitty-@-scroll-window command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match">kitty-@-send-text command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-match">kitty-@-set-background-image command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match">kitty-@-set-background-opacity command line option</a>
 </li>
@@ -1074,6 +1119,10 @@ ga('send', 'pageview');
 </li>
         <li><a href="generated/launch.html#cmdoption-marker">--marker &lt;MARKER&gt;</a>
 </li>
+        <li><a href="generated/launch.html#cmdoption-os-window-class">--os-window-class &lt;OS_WINDOW_CLASS&gt;</a>
+</li>
+        <li><a href="generated/launch.html#cmdoption-os-window-name">--os-window-name &lt;OS_WINDOW_NAME&gt;</a>
+</li>
         <li><a href="generated/launch.html#cmdoption-stdin-add-formatting">--stdin-add-formatting</a>
 </li>
         <li><a href="generated/launch.html#cmdoption-stdin-add-line-wrap-markers">--stdin-add-line-wrap-markers</a>
@@ -1129,7 +1178,15 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.allow_remote_control">kitty.allow_remote_control</a>
 </li>
+        <li><a href="conf.html#opt-kitty.background_image">kitty.background_image</a>
+</li>
+        <li><a href="conf.html#opt-kitty.background_image_layout">kitty.background_image_layout</a>
+</li>
+        <li><a href="conf.html#opt-kitty.background_image_linear">kitty.background_image_linear</a>
+</li>
         <li><a href="conf.html#opt-kitty.background_opacity">kitty.background_opacity</a>
+</li>
+        <li><a href="conf.html#opt-kitty.background_tint">kitty.background_tint</a>
 </li>
         <li><a href="conf.html#opt-kitty.bell_border_color">kitty.bell_border_color</a>
 </li>
@@ -1167,6 +1224,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="conf.html#opt-kitty.cursor">kitty.cursor</a>
 </li>
+        <li><a href="conf.html#opt-kitty.cursor_beam_thickness">kitty.cursor_beam_thickness</a>
+</li>
         <li><a href="conf.html#opt-kitty.cursor_blink_interval">kitty.cursor_blink_interval</a>
 </li>
         <li><a href="conf.html#opt-kitty.cursor_shape">kitty.cursor_shape</a>
@@ -1174,6 +1233,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.cursor_stop_blinking_after">kitty.cursor_stop_blinking_after</a>
 </li>
         <li><a href="conf.html#opt-kitty.cursor_text_color">kitty.cursor_text_color</a>
+</li>
+        <li><a href="conf.html#opt-kitty.cursor_underline_thickness">kitty.cursor_underline_thickness</a>
 </li>
         <li><a href="conf.html#opt-kitty.dim_opacity">kitty.dim_opacity</a>
 </li>
@@ -1320,6 +1381,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.update_check_interval">kitty.update_check_interval</a>
 </li>
         <li><a href="conf.html#opt-kitty.url_color">kitty.url_color</a>
+</li>
+        <li><a href="conf.html#opt-kitty.url_prefixes">kitty.url_prefixes</a>
 </li>
         <li><a href="conf.html#opt-kitty.visual_bell_duration">kitty.visual_bell_duration</a>
 </li>
@@ -2059,7 +2122,11 @@ ga('send', 'pageview');
     kitty-@-last-used-layout command line option
 
       <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-last-used-layout-all">--all</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-last-used-layout-match">--match &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-last-used-layout-all">-a</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-last-used-layout-match">-m &lt;MATCH&gt;</a>
 </li>
@@ -2089,6 +2156,10 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-launch-match">--match &lt;MATCH&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-no-response">--no-response</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-os-window-class">--os-window-class &lt;OS_WINDOW_CLASS&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-os-window-name">--os-window-name &lt;OS_WINDOW_NAME&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-self">--self</a>
 </li>
@@ -2186,6 +2257,25 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match">-m &lt;MATCH&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-send-text-match-tab">-t &lt;MATCH_TAB&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-set-background-image command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-all">--all</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-configured">--configured</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-layout">--layout &lt;LAYOUT&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-match">--match &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-all">-a</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-configured">-c</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-image-match">-m &lt;MATCH&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -2302,10 +2392,38 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.background_image
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.background_image">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.background_image_layout
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.background_image_layout">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.background_image_linear
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.background_image_linear">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.background_opacity
 
       <ul>
         <li><a href="conf.html#opt-kitty.background_opacity">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.background_tint
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.background_tint">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -2463,6 +2581,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.cursor_beam_thickness
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.cursor_beam_thickness">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.cursor_blink_interval
 
       <ul>
@@ -2488,6 +2613,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.cursor_text_color">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.cursor_underline_thickness
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.cursor_underline_thickness">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -3380,6 +3512,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitty.url_prefixes
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.url_prefixes">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.visual_bell_duration
 
       <ul>
@@ -3455,6 +3594,10 @@ ga('send', 'pageview');
         <li><a href="launch.html#cmdoption-launch-location">--location &lt;LOCATION&gt;</a>
 </li>
         <li><a href="launch.html#cmdoption-launch-marker">--marker &lt;MARKER&gt;</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-os-window-class">--os-window-class &lt;OS_WINDOW_CLASS&gt;</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-os-window-name">--os-window-name &lt;OS_WINDOW_NAME&gt;</a>
 </li>
         <li><a href="launch.html#cmdoption-launch-stdin-add-formatting">--stdin-add-formatting</a>
 </li>
