--- a/kitty/rc_protocol.html
+++ b/kitty/rc_protocol.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Documentation for the kitty remote control protocol &#8212; kitty 0.17.0 documentation</title>
+    <title>Documentation for the kitty remote control protocol &#8212; kitty 0.17.1 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -438,7 +438,7 @@ The fields in the object for every command are documented below.</p>
 <dl class="simple">
 <dt><code class="code docutils literal notranslate"><span class="pre">colors</span> <span class="pre">(required)</span></code></dt><dd><p>An object mapping names to colors as 24-bit RGB integers</p>
 </dd>
-<dt><code class="code docutils literal notranslate"><span class="pre">cursor_text_color</span> <span class="pre">(optional)</span></code></dt><dd><p>A 24-bit color for text under the cursor</p>
+<dt><code class="code docutils literal notranslate"><span class="pre">cursor_text_color</span> <span class="pre">(optional)</span></code></dt><dd><p>A 24-bit color for text under the cursor, or null to use background.</p>
 </dd>
 <dt><code class="code docutils literal notranslate"><span class="pre">match_window</span> <span class="pre">(optional)</span></code></dt><dd><p>Window to change colors in</p>
 </dd>
