--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; kitty 0.17.1 documentation</title>
+    <title>Index &#8212; kitty 0.17.2 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -605,8 +605,6 @@ ga('send', 'pageview');
         <li><a href="launch.html#cmdoption-launch-os-window-class">launch command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --os-window-name &lt;OS_WINDOW_NAME&gt;
 
@@ -618,6 +616,8 @@ ga('send', 'pageview');
         <li><a href="launch.html#cmdoption-launch-os-window-name">launch command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --override &lt;OVERRIDE&gt;
 
@@ -888,6 +888,17 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --watcher &lt;WATCHER&gt;
+
+      <ul>
+        <li><a href="generated/launch.html#cmdoption-watcher">command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-watcher">kitty-@-launch command line option</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-watcher">launch command line option</a>
+</li>
+      </ul></li>
+      <li>
     --window-title &lt;WINDOW_TITLE&gt;
 
       <ul>
@@ -1085,6 +1096,17 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    -w &lt;WATCHER&gt;
+
+      <ul>
+        <li><a href="generated/launch.html#cmdoption-watcher">command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-watcher">kitty-@-launch command line option</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-watcher">launch command line option</a>
+</li>
+      </ul></li>
+      <li>
     -z &lt;Z_INDEX&gt;
 
       <ul>
@@ -1135,7 +1157,11 @@ ga('send', 'pageview');
 </li>
         <li><a href="generated/launch.html#cmdoption-type">--type &lt;TYPE&gt;</a>
 </li>
+        <li><a href="generated/launch.html#cmdoption-watcher">--watcher &lt;WATCHER&gt;</a>
+</li>
         <li><a href="generated/launch.html#cmdoption-title">--window-title &lt;WINDOW_TITLE&gt;</a>
+</li>
+        <li><a href="generated/launch.html#cmdoption-watcher">-w &lt;WATCHER&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -2175,9 +2201,13 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-type">--type &lt;TYPE&gt;</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-watcher">--watcher &lt;WATCHER&gt;</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-title">--window-title &lt;WINDOW_TITLE&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-match">-m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-watcher">-w &lt;WATCHER&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -3611,7 +3641,11 @@ ga('send', 'pageview');
 </li>
         <li><a href="launch.html#cmdoption-launch-type">--type &lt;TYPE&gt;</a>
 </li>
+        <li><a href="launch.html#cmdoption-launch-watcher">--watcher &lt;WATCHER&gt;</a>
+</li>
         <li><a href="launch.html#cmdoption-launch-title">--window-title &lt;WINDOW_TITLE&gt;</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-watcher">-w &lt;WATCHER&gt;</a>
 </li>
       </ul></li>
   </ul></td>
