kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
-    <title>Index &#8212; kitty 0.17.2 documentation</title>
+    <title>Index &#8212; kitty 0.17.3 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -130,6 +130,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-font-size-all">kitty-@-set-font-size command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-all">kitty-@-set-spacing command line option</a>
+</li>
       </ul></li>
       <li>
     --allow-remote-control
@@ -211,6 +213,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-set-background-image-configured">kitty-@-set-background-image command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-configured">kitty-@-set-colors command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-configured">kitty-@-set-spacing command line option</a>
 </li>
       </ul></li>
       <li>
@@ -299,6 +303,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="invocation.html#cmdoption-kitty-debug-keyboard">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --debug-rendering
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-debug-gl">kitty command line option</a>
 </li>
       </ul></li>
       <li>
@@ -528,6 +539,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-match">kitty-@-set-colors command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match">kitty-@-set-spacing command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-set-tab-title-match">kitty-@-set-tab-title command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-window-title-match">kitty-@-set-window-title command line option</a>
@@ -544,6 +557,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match-tab">kitty-@-set-background-opacity command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-match-tab">kitty-@-set-colors command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match-tab">kitty-@-set-spacing command line option</a>
 </li>
       </ul></li>
       <li>
@@ -953,6 +968,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-font-size-all">kitty-@-set-font-size command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-all">kitty-@-set-spacing command line option</a>
+</li>
       </ul></li>
       <li>
     -a &lt;AXIS&gt;
@@ -970,6 +987,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-set-background-image-configured">kitty-@-set-background-image command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-configured">kitty-@-set-colors command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-configured">kitty-@-set-spacing command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1043,6 +1062,8 @@ ga('send', 'pageview');
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-match">kitty-@-set-colors command line option</a>
 </li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match">kitty-@-set-spacing command line option</a>
+</li>
         <li><a href="remote-control.html#cmdoption-kitty-set-tab-title-match">kitty-@-set-tab-title command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-window-title-match">kitty-@-set-window-title command line option</a>
@@ -1070,6 +1091,8 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match-tab">kitty-@-set-background-opacity command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-match-tab">kitty-@-set-colors command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match-tab">kitty-@-set-spacing command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1179,6 +1202,8 @@ ga('send', 'pageview');
         <li><a href="kittens/diff.html#opt-kitten-diff.hunk_margin_bg">kitten-diff.hunk_margin_bg</a>
 </li>
         <li><a href="kittens/diff.html#opt-kitten-diff.margin_bg">kitten-diff.margin_bg</a>
+</li>
+        <li><a href="kittens/diff.html#opt-kitten-diff.margin_filler_bg">kitten-diff.margin_filler_bg</a>
 </li>
         <li><a href="kittens/diff.html#opt-kitten-diff.num_context_lines">kitten-diff.num_context_lines</a>
 </li>
@@ -1303,6 +1328,8 @@ ga('send', 'pageview');
         <li><a href="conf.html#opt-kitty.kitty_mod">kitty.kitty_mod</a>
 </li>
         <li><a href="conf.html#opt-kitty.linux_display_server">kitty.linux_display_server</a>
+</li>
+        <li><a href="conf.html#opt-kitty.listen_on">kitty.listen_on</a>
 </li>
         <li><a href="conf.html#opt-kitty.macos_custom_beam_cursor">kitty.macos_custom_beam_cursor</a>
 </li>
@@ -1649,6 +1676,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    kitten-diff.margin_filler_bg
+
+      <ul>
+        <li><a href="kittens/diff.html#opt-kitten-diff.margin_filler_bg">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitten-diff.num_context_lines
 
       <ul>
@@ -1831,6 +1865,8 @@ ga('send', 'pageview');
         <li><a href="invocation.html#cmdoption-kitty-debug-gl">--debug-gl</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-debug-keyboard">--debug-keyboard</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-debug-gl">--debug-rendering</a>
 </li>
         <li><a href="invocation.html#cmdoption-kitty-detach">--detach</a>
 </li>
@@ -2348,8 +2384,6 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-set-colors-match-tab">-t &lt;MATCH_TAB&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     kitty-@-set-font-size command line option
 
@@ -2357,6 +2391,29 @@ ga('send', 'pageview');
         <li><a href="remote-control.html#cmdoption-kitty-set-font-size-all">--all</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-font-size-all">-a</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    kitty-@-set-spacing command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-all">--all</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-configured">--configured</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match">--match &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match-tab">--match-tab &lt;MATCH_TAB&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-all">-a</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-configured">-c</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match">-m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-spacing-match-tab">-t &lt;MATCH_TAB&gt;</a>
 </li>
       </ul></li>
       <li>
@@ -2888,6 +2945,13 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="conf.html#opt-kitty.linux_display_server">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.listen_on
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.listen_on">Config Setting</a>
 </li>
       </ul></li>
       <li>
