kitty website updates

--- a/kitty/marks.html
+++ b/kitty/marks.html
@@ -1,18 +1,19 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>Marks &#8212; kitty 0.17.4 documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marks &#8212; kitty 0.18.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
-    <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
-    <script type="text/javascript" src="_static/language_data.js"></script>
+    <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
+    <script src="_static/jquery.js"></script>
+    <script src="_static/underscore.js"></script>
+    <script src="_static/doctools.js"></script>
+    <script src="_static/language_data.js"></script>
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
@@ -163,8 +164,8 @@ use it by mapping it to some shortcut in <code class="file docutils literal notr
 <span class="nb">map</span> <span class="n">ctrl</span><span class="o">+</span><span class="n">n</span> <span class="n">scroll_to_mark</span> <span class="nb">next</span>
 </pre></div>
 </div>
-<p>Then pressing <kbd class="kbd docutils literal notranslate">ctrl+p</kbd> will scroll to the first line in the scrollback
-buffer above the current top line that contains a mark. Pressing <kbd class="kbd docutils literal notranslate">ctrl+n</kbd>
+<p>Then pressing <kbd class="kbd docutils literal notranslate"><kbd class="kbd docutils literal notranslate">ctrl</kbd>+<kbd class="kbd docutils literal notranslate">p</kbd></kbd> will scroll to the first line in the scrollback
+buffer above the current top line that contains a mark. Pressing <kbd class="kbd docutils literal notranslate"><kbd class="kbd docutils literal notranslate">ctrl</kbd>+<kbd class="kbd docutils literal notranslate">n</kbd></kbd>
 will scroll to show the first line below the current last line that contains
 a mark. If you wish to jump to a mark of a specific type, you can add that to
 the mapping:</p>
