--- a/kitty/binary.html
+++ b/kitty/binary.html
@@ -1,18 +1,19 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>kitty - Binary install &#8212; kitty 0.17.4 documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>kitty - Binary install &#8212; kitty 0.18.0 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
-    <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
-    <script type="text/javascript" src="_static/jquery.js"></script>
-    <script type="text/javascript" src="_static/underscore.js"></script>
-    <script type="text/javascript" src="_static/doctools.js"></script>
-    <script type="text/javascript" src="_static/language_data.js"></script>
+    <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
+    <script src="_static/jquery.js"></script>
+    <script src="_static/underscore.js"></script>
+    <script src="_static/doctools.js"></script>
+    <script src="_static/language_data.js"></script>
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
@@ -130,7 +131,7 @@ ln -s ~/.local/kitty.app/bin/kitty ~/.local/bin/
 <span class="c1"># Place the kitty.desktop file somewhere it can be found by the OS</span>
 cp ~/.local/kitty.app/share/applications/kitty.desktop ~/.local/share/applications
 <span class="c1"># Update the path to the kitty icon in the kitty.desktop file</span>
-sed -i <span class="s2">&quot;s/Icon\=kitty/Icon\=\/home\/</span><span class="nv">$USER</span><span class="s2">\/.local\/kitty.app\/share\/icons\/hicolor\/256x256\/apps\/kitty.png/g&quot;</span> ~/.local/share/applications/kitty.desktop
+sed -i <span class="s2">&quot;s|Icon=kitty|Icon=/home/</span><span class="nv">$USER</span><span class="s2">/.local/kitty.app/share/icons/hicolor/256x256/apps/kitty.png|g&quot;</span> ~/.local/share/applications/kitty.desktop
 </pre></div>
 </div>
 </div>
