kitty website updates

--- a/kitty/index.html
+++ b/kitty/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kitty - the fast, featureful, GPU based terminal emulator &#8212; kitty 0.18.1 documentation</title>
+    <title>kitty - the fast, featureful, GPU based terminal emulator &#8212; kitty 0.18.2 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -550,6 +550,8 @@ For example:</p>
 <span class="nf">new_os_window</span>
 <span class="c1"># set new window size to 80x25 cells</span>
 <span class="nf">os_window_size</span><span class="l"> 80c 25c</span>
+<span class="c1"># set the --class for the new OS window</span>
+<span class="nf">os_window_class</span><span class="l"> mywindow</span>
 <span class="nf">launch</span><span class="l"> sh</span>
 <span class="c1"># Make the current window the active (focused) window</span>
 <span class="nf">focus</span>
