--- a/kitty/protocol-extensions.html
+++ b/kitty/protocol-extensions.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extensions to the xterm protocol &#8212; kitty 0.18.1 documentation</title>
+    <title>Extensions to the xterm protocol &#8212; kitty 0.18.2 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -312,7 +312,7 @@ first, for example:</p>
 Further, since it is invalid, it should be ignored by terminal emulators
 that do not support this extension, thereby making it safe to use, simply
 always send it before starting a new OSC 52 paste, even if you aren't chunking
-up large pastes, that way kitty wont concatenate your paste, and it will have
+up large pastes, that way kitty won't concatenate your paste, and it will have
 no ill-effects in other terminal emulators.</p>
 <p>In case you're using software that can't be easily adapted to this
 protocol extension, it can be disabled by specifying <code class="docutils literal notranslate"><span class="pre">no-append</span></code> to the
