--- a/kitty/rc_protocol.html
+++ b/kitty/rc_protocol.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documentation for the kitty remote control protocol &#8212; kitty 0.18.1 documentation</title>
+    <title>Documentation for the kitty remote control protocol &#8212; kitty 0.18.2 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -317,7 +317,7 @@ The fields in the object for every command are documented below.</p>
 </dd>
 <dt><code class="code docutils literal notranslate"><span class="pre">copy_env</span> <span class="pre">(default:</span> <span class="pre">False)</span></code></dt><dd><p>Boolean indicating whether to copy the environ from the current window</p>
 </dd>
-<dt><code class="code docutils literal notranslate"><span class="pre">location</span> <span class="pre">(default:</span> <span class="pre">last)</span></code></dt><dd><p>Where in the tab to open the new window</p>
+<dt><code class="code docutils literal notranslate"><span class="pre">location</span> <span class="pre">(default:</span> <span class="pre">default)</span></code></dt><dd><p>Where in the tab to open the new window</p>
 </dd>
 <dt><code class="code docutils literal notranslate"><span class="pre">allow_remote_control</span> <span class="pre">(default:</span> <span class="pre">False)</span></code></dt><dd><p>Boolean indicating whether to allow remote control from the new window</p>
 </dd>
