kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -4,8 +4,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index &#8212; kitty 0.18.2 documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index &#8212; kitty 0.18.3 documentation</title>
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -401,10 +401,31 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --hints-background-color &lt;HINTS_BACKGROUND_COLOR&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-background-color">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --hints-foreground-color &lt;HINTS_FOREGROUND_COLOR&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-foreground-color">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
     --hints-offset &lt;HINTS_OFFSET&gt;
 
       <ul>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-offset">kitty-+kitten-hints command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --hints-text-color &lt;HINTS_TEXT_COLOR&gt;
+
+      <ul>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-text-color">kitty-+kitten-hints command line option</a>
 </li>
       </ul></li>
       <li>
@@ -624,6 +645,8 @@ ga('send', 'pageview');
         <li><a href="launch.html#cmdoption-launch-os-window-class">launch command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --os-window-name &lt;OS_WINDOW_NAME&gt;
 
@@ -635,8 +658,6 @@ ga('send', 'pageview');
         <li><a href="launch.html#cmdoption-launch-os-window-name">launch command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --override &lt;OVERRIDE&gt;
 
@@ -1957,7 +1978,13 @@ ga('send', 'pageview');
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-customize-processing">--customize-processing &lt;CUSTOMIZE_PROCESSING&gt;</a>
 </li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-background-color">--hints-background-color &lt;HINTS_BACKGROUND_COLOR&gt;</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-foreground-color">--hints-foreground-color &lt;HINTS_FOREGROUND_COLOR&gt;</a>
+</li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-offset">--hints-offset &lt;HINTS_OFFSET&gt;</a>
+</li>
+        <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-hints-text-color">--hints-text-color &lt;HINTS_TEXT_COLOR&gt;</a>
 </li>
         <li><a href="kittens/hints.html#cmdoption-kitty-kitten-hints-linenum-action">--linenum-action &lt;LINENUM_ACTION&gt;</a>
 </li>
